--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,5 +18,5 @@ jobs:
           uses: meeDamian/github-release@v1.0.0
           with:
             gzip: false
-            files: dist/*.zip
+            files: deploy/*.zip
             token: ${{ secrets.GITHUB_TOKEN }}
