Copy the deployment zip to the current working dir?

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,8 +13,8 @@ jobs:
           run: sudo apt-get -y install quilt qemu-user-static debootstrap bsdtar
         - name: Run Build script
           run: sudo ./build.sh
-        - name: Debug deploy dir
-          run: ls -la deploy/
+        - name: Copy ZIP to current working dir
+          run: cp deploy/*.zip ./
         - name: Debug current working dir
           run: ls -la
         - name: Release Image
@@ -22,5 +22,5 @@ jobs:
           uses: meeDamian/github-release@v1.0.0
           with:
             gzip: false
-            files: deploy/*.zip
+            files: *.zip
             token: ${{ secrets.GITHUB_TOKEN }}
