--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,5 @@
 name: Run Release Script on push to MASTER
-on: 
-    push:
-        branches:
-            - master
+on: push
 
 jobs:
     build:
@@ -17,8 +14,7 @@ jobs:
           run: cp deploy/*.zip ./
         - name: Debug current working dir
           run: ls -la
-        - name: Release Image
-          if: startsWith(github.ref, 'refs/tags/')
+        - name: Release Image to placeholder or release
           uses: meeDamian/github-release@v1.0.0
           with:
             gzip: false
