--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ jobs:
           run: ls -la
         - name: Release Image to placeholder or release
           uses: meeDamian/github-release@v1.0.0
+          if: startsWith(github.ref, 'refs/tags/')
           with:
             gzip: false
             files: "*.zip"
