--- a/stage2/04-docker-compose/files/docker-compose.yml
+++ b/stage2/04-docker-compose/files/docker-compose.yml
@@ -3,7 +3,7 @@ services:
         lnd:
                 image: lncm/lnd:v0.8.0-experimental
                 volumes:
-                        - /home/umbrel/.lnd:/root/.lnd
+                        - /home/umbrel/lnd:/root/.lnd
                         - /var/lib/tor:/var/lib/tor
                         - /run/tor:/run/tor
                 restart: on-failure
