--- a/stage2/07-configure-LND/files/lnd.conf
+++ b/stage2/07-configure-LND/files/lnd.conf
@@ -4,9 +4,9 @@ listen=0.0.0.0:9735
 rpclisten=0.0.0.0:10009
 restlisten=0.0.0.0:8080
 maxpendingchannels=3
-minchansize=10000
+minchansize=1337
 alias=Umbrel Node
-color=#6320fc
+color=#5351FB
 
 ; Makes routing faster but have to use images built with experimental tag
 [Routing]
