--- a/stage2/08-configure-bitcoind/files/bitcoin.conf
+++ b/stage2/08-configure-bitcoind/files/bitcoin.conf
@@ -12,12 +12,14 @@ maxuploadtarget=5000
 port=8333
 rpcport=8332
 
-; Prune it up first
+; Keep it pruned while we don't have a extenal drive to work with
 prune=550
+
+; When we have one we remove this
 ; Temporary solution while we don't have the drives
 ; txindex=1
+; blockfilterindex=1
 
-blockfilterindex=1
 peerbloomfilters=0
 addresstype=bech32
 avoidpartialspends=1
