--- a/stage2/08-configure-bitcoind/files/bitcoin.conf
+++ b/stage2/08-configure-bitcoind/files/bitcoin.conf
@@ -4,7 +4,7 @@ torcontrol=127.0.0.1:9051
 server=1
 rest=1
 
-; Some Pi optimizations
+# Some Pi optimizations
 maxmempool=512
 maxconnections=40
 maxuploadtarget=5000
@@ -12,13 +12,13 @@ maxuploadtarget=5000
 port=8333
 rpcport=8332
 
-; Keep it pruned while we don't have a extenal drive to work with
+# Keep it pruned while we don't have a extenal drive to work with
 prune=550
 
-; When we have one we remove this
-; Temporary solution while we don't have the drives
-; txindex=1
-; blockfilterindex=1
+# When we have one we remove this
+# Temporary solution while we don't have the drives
+# txindex=1
+# blockfilterindex=1
 
 peerbloomfilters=0
 addresstype=bech32
