Update and rename release.yml to on-tag-only.yml
Build on tag only

--- a/.github/workflows/on-tag-only.yml
+++ b/.github/workflows/on-tag-only.yml
@@ -1,5 +1,7 @@
-name: Run Release Script on push to MASTER
-on: push
+name: Automatically Build image on tag ONLY
+on:
+    push:
+        tags: [ '*' ]
 
 jobs:
     build:
