--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -7,5 +7,10 @@ jobs:
         runs-on: ubuntu-18.04
         steps:
         - uses: actions/checkout@v1
+        - name: Enable experimental features in Docker
+        - run: |
+                sudo rm -rf /etc/docker/daemon.json \
+                echo '{"experimental": true}' | sudo tee -a /etc/docker/daemon.json \
+                sudo systemctl restart docker
         - name: Run Build script
           run: sudo ./build-test.sh
