--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -8,7 +8,7 @@ jobs:
         steps:
         - uses: actions/checkout@v1
         - name: Enable experimental features in Docker
-        - run: |
+          run: |
                 sudo rm -rf /etc/docker/daemon.json \
                 echo '{"experimental": true}' | sudo tee -a /etc/docker/daemon.json \
                 sudo systemctl restart docker
