--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -9,8 +9,8 @@ jobs:
         - uses: actions/checkout@v1
         - name: Enable experimental features in Docker
           run: |
-                sudo rm -rf /etc/docker/daemon.json \
-                echo '{"experimental": true}' | sudo tee -a /etc/docker/daemon.json \
+                sudo rm -rf /etc/docker/daemon.json
+                echo '{"experimental": true}' | sudo tee -a /etc/docker/daemon.json
                 sudo systemctl restart docker
         - name: Run Build script
           run: sudo ./build-test.sh
