--- a/.github/workflows/on-tag-only.yml
+++ b/.github/workflows/on-tag-only.yml
@@ -5,19 +5,33 @@ on:
 
 jobs:
     build:
+
         runs-on: ubuntu-18.04
+        
         steps:
+
         - uses: actions/checkout@v1
         - name: Run Apt-get update
           run: sudo apt-get update
+
         - name: Install Dependencies
           run: sudo apt-get -y install quilt qemu-user-static debootstrap bsdtar
+
+        - name: Enable experimental features in Docker
+          run: |
+                sudo rm -rf /etc/docker/daemon.json
+                echo '{"experimental": true}' | sudo tee -a /etc/docker/daemon.json
+                sudo systemctl restart docker
+
         - name: Run Build script
           run: sudo ./build.sh
+
         - name: Copy ZIP to current working dir
           run: cp deploy/*.zip ./
+
         - name: Debug current working dir
           run: ls -la
+
         - name: Release Image to placeholder or release
           uses: meeDamian/github-release@v1.0.0
           if: startsWith(github.ref, 'refs/tags/')
