--- a/.github/workflows/on-tag-only.yml
+++ b/.github/workflows/on-tag-only.yml
@@ -32,11 +32,16 @@ jobs:
         - name: Debug current working dir
           run: ls -la
 
-        - name: Release Image to placeholder or release
-          uses: meeDamian/github-release@2.0
-          if: startsWith(github.ref, 'refs/tags/')
+        # - name: Release Image to placeholder or release
+        #   uses: meeDamian/github-release@2.0
+        #   if: startsWith(github.ref, 'refs/tags/')
+        #   with:
+        #     gzip: false
+        #     files: "*.zip"
+        #     token: ${{ secrets.GITHUB_TOKEN }}
+        #     allow_override: true
+
+        - uses: actions/upload-artifact@v2
+        - name: Upload artifact
           with:
-            gzip: false
-            files: "*.zip"
-            token: ${{ secrets.GITHUB_TOKEN }}
-            allow_override: true
+            path: *.zip
