--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -1,7 +1,8 @@
 name: Testing only
 on:
     push:
-        tags: [ '*' ]
+        branches: 
+          - *
 
 jobs:
     build:
@@ -15,10 +16,7 @@ jobs:
                 sudo systemctl restart docker
         - name: Run Build script
           run: sudo ./build-test.sh
-        - name: Release zip
-          uses: meeDamian/github-release@2.0
+        - name: Upload artifact
+          uses: actions/upload-artifact@v2
           with:
-            gzip: false
-            files: "overlay2.tar.gz"
-            token: ${{ secrets.GITHUB_TOKEN }}
-            allow_override: true
+            path: overlay2.tar.gz
