--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -17,4 +17,4 @@ jobs:
         - name: Upload artifact
           uses: actions/upload-artifact@v2
           with:
-            path: overlay2.tar.gz
+            path: /home/runner/overlay2.tar.gz
