--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -1,6 +1,7 @@
 name: Testing only
 on:
-    push
+    push:
+      tags: [ '*' ]
 
 jobs:
     build:
@@ -14,7 +15,25 @@ jobs:
                 sudo systemctl restart docker
         - name: Run Build script
           run: sudo ./build-test.sh
-        - name: Upload artifact
-          uses: actions/upload-artifact@v2
+
+        - name: Create Release
+          id: create_release
+          uses: actions/create-release@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           with:
-            path: /home/runner/overlay2.tar.gz
+            tag_name: ${{ github.ref }}
+            release_name: Release ${{ github.ref }}
+            draft: false
+            prerelease: true
+
+        - name: Upload Release Asset
+          id: upload-release-asset 
+          uses: actions/upload-release-asset@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+            asset_path: ./overlay2.tar.gz
+            asset_name: /home/runner/overlay2.tar.gz
+            asset_content_type: application/gzip
