--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -34,6 +34,6 @@ jobs:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           with:
             upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-            asset_path: ./overlay2.tar.gz
-            asset_name: /home/runner/overlay2.tar.gz
+            asset_path: /home/runner/overlay2.tar.gz
+            asset_name: overlay2.tar.gz
             asset_content_type: application/gzip
