--- a/.github/workflows/on-tag-only.yml
+++ b/.github/workflows/on-tag-only.yml
@@ -9,13 +9,26 @@ jobs:
         runs-on: ubuntu-18.04
         
         steps:
-
+        
         - uses: actions/checkout@v1
+
         - name: Run Apt-get update
           run: sudo apt-get update
 
-        - name: Install Dependencies
+        - name: Install dependencies
           run: sudo apt-get -y install quilt qemu-user-static debootstrap bsdtar
+
+        - name: Nuke current Docker installation
+          run: |
+                sudo systemctl stop docker
+                sudo apt-get purge docker-ce docker-ce-cli containerd.io moby-engine moby-cli
+                sudo rm -rf /var/lib/docker
+        
+        - name: Re-install Docker
+          run: |
+                curl -fsSL https://get.docker.com -o get-docker.sh
+                sudo sh get-docker.sh
+                docker --version
 
         - name: Enable experimental features in Docker
           run: |
@@ -23,7 +36,7 @@ jobs:
                 echo '{"experimental": true}' | sudo tee -a /etc/docker/daemon.json
                 sudo systemctl restart docker
 
-        - name: Run Build script
+        - name: Run build script
           run: sudo ./build.sh
 
         - name: Copy ZIP to current working dir
@@ -31,22 +44,8 @@ jobs:
 
         - name: Debug current working dir
           run: ls -la
-
-        # - name: Release Image to placeholder or release
-        #   uses: meeDamian/github-release@2.0
-        #   if: startsWith(github.ref, 'refs/tags/')
-        #   with:
-        #     gzip: false
-        #     files: "*.zip"
-        #     token: ${{ secrets.GITHUB_TOKEN }}
-        #     allow_override: true
-
-        # - name: Upload artifact
-        #   uses: actions/upload-artifact@v2
-        #   with:
-        #     path: "*.zip"
       
-        - name: Create Release
+        - name: Create release
           id: create_release
           uses: actions/create-release@v1
           env:
@@ -55,9 +54,9 @@ jobs:
             tag_name: ${{ github.ref }}
             release_name: Release ${{ github.ref }}
             draft: false
-            prerelease: true
+            prerelease: false
 
-        - name: Upload Release Asset
+        - name: Upload image
           id: upload-release-asset 
           uses: actions/upload-release-asset@v1
           env:
