--- a/.github/workflows/on-tag-only.yml
+++ b/.github/workflows/on-tag-only.yml
@@ -1,7 +1,9 @@
 name: Automatically Build image on tag ONLY
 on:
     push:
-        tags: [ '*' ]
+        tags:
+          - v[0-9]+.[0-9]+.[0-9]+
+          - v[0-9]+.[0-9]+.[0-9]+-*
 
 jobs:
     build:
