Install Umbrel v0.1.4-beta (#47)
* Updates for Umbrel v0.1.4-beta

* Fix UMBREL_ROOT default path

--- a/.github/workflows/on-tag-only.yml
+++ b/.github/workflows/on-tag-only.yml
@@ -55,7 +55,7 @@ jobs:
           with:
             tag_name: ${{ github.ref }}
             release_name: Release ${{ github.ref }}
-            draft: false
+            draft: true
             prerelease: false
 
         - name: Upload image
