Change image name from umbr3l-lite.zip to umbrel-<tag>.zip (#48)
* Change image name from umbr3l-lite.zip to umbrel-os.zip

* Add version tag when run inside git repo

* Drop "os" suffix now we have tag data

* Fix asset names

* Run builds on push and PRs

* add os suffix back in

* Update action name

--- a/config
+++ b/config
@@ -1,5 +1,5 @@
-IMG_NAME=umbr3l
-TARGET_HOSTNAME=umbrel
+IMG_NAME=umbrel
+TARGET_HOSTNAME=umbrel-os
 TIMEZONE_DEFAULT="Etc/UTC"
 FIRST_USER_NAME=umbrel
 FIRST_USER_PASS=moneyprintergobrrr
