--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -34,8 +34,15 @@ jobs:
               echo '{"experimental": true}' | sudo tee -a /etc/docker/daemon.json
               sudo systemctl restart docker
 
+        - name: Set image name
+          run: |
+              IMAGE_NAME="umbrel-os-$(git describe --tags)"
+              echo "::set-env name=IMAGE_NAME::$IMAGE_NAME"
+
         - name: Run build script
-          run: sudo ./build.sh
+          run: |
+              echo "Building $IMAGE_NAME"
+              sudo IMG_FILENAME=$IMAGE_NAME ZIP_FILENAME=$IMAGE_NAME ./build.sh
 
         - name: Copy ZIP to current working dir
           run: cp deploy/*.zip ./
@@ -46,4 +53,5 @@ jobs:
         - name: Upload artifact
           uses: actions/upload-artifact@v2
           with:
-            path: umbrel-*.zip
+            path: ${{ env.IMAGE_NAME }}.zip
+            name: ${{ env.IMAGE_NAME }}.zip
