--- a/.github/workflows/on-tag-only.yml
+++ b/.github/workflows/on-tag-only.yml
@@ -42,8 +42,8 @@ jobs:
           run: |
                 UMBREL_OS_VERSION="$(git describe --tags)"
                 IMAGE_NAME="umbrel-os-${UMBREL_OS_VERSION}"
-                echo "::set-env name=UMBREL_OS_VERSION::$UMBREL_OS_VERSION"
-                echo "::set-env name=IMAGE_NAME::$IMAGE_NAME"
+                echo "UMBREL_OS_VERSION=$UMBREL_OS_VERSION"  >> $GITHUB_ENV
+                echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
 
         - name: Run build script
           run: |
