--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -8,50 +8,47 @@ jobs:
         
         steps:
         
-        - uses: actions/checkout@v1
+        - uses: actions/checkout@v2
+          with:
+            fetch-depth: 0
 
-        - name: Run Apt-get update
-          run: sudo apt-get update
-
-        - name: Install dependencies
-          run: sudo apt-get -y install quilt qemu-user-static debootstrap libarchive-tools
-
-        - name: Nuke current Docker installation
+        - name: Dependencies
           run: |
-              sudo systemctl stop docker
-              sudo apt-get purge docker-ce docker-ce-cli containerd.io moby-engine moby-cli
-              sudo rm -rf /var/lib/docker
-        
-        - name: Re-install Docker
-          run: |
-              curl -fsSL https://get.docker.com -o get-docker.sh
-              sudo sh get-docker.sh
-              docker --version
-
-        - name: Enable experimental features in Docker
-          run: |
-              sudo rm -rf /etc/docker/daemon.json
-              echo '{"experimental": true}' | sudo tee -a /etc/docker/daemon.json
-              sudo systemctl restart docker
-
+              sudo sed -i 's/focal/hirsute/g' /etc/apt/sources.list
+              sudo apt update
+              sudo apt -y dist-upgrade
+              sudo apt install binfmt-support qemu-user-static quilt debootstrap apt-cacher-ng
+              sudo sed 's/# PassThroughPattern:.*this would allow.*/PassThroughPattern: .* #/' -i /etc/apt-cacher-ng/acng.conf
+              sudo chmod -R 0777 /var/cache/apt-cacher-ng
         - name: Set image name
           run: |
               UMBREL_OS_VERSION="$(git describe --tags)"
               IMAGE_NAME="umbrel-os-${UMBREL_OS_VERSION}"
               echo "UMBREL_OS_VERSION=$UMBREL_OS_VERSION"  >> $GITHUB_ENV
               echo "IMAGE_NAME=$IMAGE_NAME"  >> $GITHUB_ENV
-
+              echo "APT_PROXY=http://localhost:3142" >> $GITHUB_ENV
+        - name: Cache apt packages
+          uses: actions/cache@v2
+          env:
+            cache-name: apt-cacher-ng-cache
+          with:
+            path: /var/cache/apt-cacher-ng
+            key: bullseye-${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('config') }}
+            restore-keys: |
+              bullseye-${{ runner.os }}-build-${{ env.cache-name }}-
+              bullseye-${{ runner.os }}-build-
+              bullseye-${{ runner.os }}-
         - name: Run build script
           run: |
               echo "Building $IMAGE_NAME"
+              sudo docker system prune --all --force
               sudo IMG_FILENAME=$IMAGE_NAME ZIP_FILENAME=$IMAGE_NAME UMBREL_OS_VERSION=$UMBREL_OS_VERSION ./build.sh
-
         - name: Copy ZIP to current working dir
           run: cp deploy/*.zip ./
 
         - name: Debug current working dir
           run: ls -la
-        
+
         - name: Upload artifact
           uses: actions/upload-artifact@v2
           with:
