--- a/config
+++ b/config
@@ -1,10 +1,8 @@
-IMG_NAME=umbrel-os
-TARGET_HOSTNAME=umbrel
+IMG_NAME=citadel-os
+TARGET_HOSTNAME=citadel
 TIMEZONE_DEFAULT="Etc/UTC"
-FIRST_USER_NAME=umbrel
+FIRST_USER_NAME=citadel
 FIRST_USER_PASS=moneyprintergobrrr
 ENABLE_SSH=1
-BUILD_SCRIPTS="Umbrel OS official build scripts"
-BUILD_SCRIPTS_REPO="https://github.com/getumbrel/umbrel-os"
-UMBREL_VERSION=0.3.7
+CITADEL_VERSION=0.4.8
 
