--- a/config
+++ b/config
@@ -4,5 +4,5 @@ TIMEZONE_DEFAULT="Etc/UTC"
 FIRST_USER_NAME=citadel
 FIRST_USER_PASS=moneyprintergobrrr
 ENABLE_SSH=1
-CITADEL_VERSION=0.4.8
-
+CITADEL_REPO=https://github.com/runcitadel/compose-nonfree
+CITADEL_BRANCH=main
