--- a/.github/workflows/on-tag-only.yml
+++ b/.github/workflows/on-tag-only.yml
@@ -54,16 +54,6 @@ jobs:
         - name: Debug current working dir
           run: ls -la
 
-        - name: "Get latest Citadel release from the GitHub API"
-          uses: octokit/request-action@v2.x
-          id: get_last_release
-          with:
-            route: POST /repos/{owner}/{repo}/releases/latest
-            owner: runcitadel
-            repo: compose-nonfree
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
         - name: Create release draft
           uses: softprops/action-gh-release@v1
           with:
@@ -71,6 +61,6 @@ jobs:
               ${{ env.IMAGE_NAME }}.zip
             name: ${{ github.ref }}
             draft: true
-            body: ${{ fromJson(steps.get_last_release.outputs.data).body }}
+            body: "TODO: Release notes"
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
