--- a/config
+++ b/config
@@ -2,7 +2,7 @@ IMG_NAME=citadel-os
 TARGET_HOSTNAME=citadel
 TIMEZONE_DEFAULT="Etc/UTC"
 FIRST_USER_NAME=citadel
-FIRST_USER_PASS=moneyprintergobrrr
+FIRST_USER_PASS=freedom
 ENABLE_SSH=1
-CITADEL_REPO=https://github.com/runcitadel/compose-nonfree
-CITADEL_BRANCH=dev
+CITADEL_REPO=https://github.com/runcitadel/core
+CITADEL_BRANCH=main
