--- a/.github/workflows/on-tag-only.yml
+++ b/.github/workflows/on-tag-only.yml
@@ -8,7 +8,7 @@ on:
 jobs:
     build:
 
-        runs-on: ubuntu-20.04
+        runs-on: self-hosted
         
         steps:
 
@@ -16,32 +16,12 @@ jobs:
           with:
             fetch-depth: 0
 
-        - name: Dependencies
-          run: |
-              sudo sed -i 's/focal/hirsute/g' /etc/apt/sources.list
-              sudo apt update
-              sudo apt -y dist-upgrade
-              sudo apt install binfmt-support qemu-user-static quilt debootstrap apt-cacher-ng libarchive-tools qemu-utils
-              sudo sed 's/# PassThroughPattern:.*this would allow.*/PassThroughPattern: .* #/' -i /etc/apt-cacher-ng/acng.conf
-              sudo chmod -R 0777 /var/cache/apt-cacher-ng
-        - name: Cache apt packages
-          uses: actions/cache@v2
-          env:
-            cache-name: apt-cacher-ng-cache
-          with:
-            path: /var/cache/apt-cacher-ng
-            key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-            restore-keys: |
-              ${{ runner.os }}-build-${{ env.cache-name }}-
-              ${{ runner.os }}-build-
-              ${{ runner.os }}-
         - name: Set image name
           run: |
                 CITADEL_OS_VERSION="$(git describe --tags)"
                 IMAGE_NAME="citadel-os-${CITADEL_OS_VERSION}"
                 echo "CITADEL_OS_VERSION=$CITADEL_OS_VERSION"  >> $GITHUB_ENV
                 echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
-                echo "APT_PROXY=http://172.17.0.1:3142" >> $GITHUB_ENV
         - name: Run build script
           run: |
                 echo "Building $IMAGE_NAME"
