--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -4,7 +4,7 @@ on: ["push", "pull_request"]
 jobs:
     build:
 
-        runs-on: ubuntu-20.04
+        runs-on: self-hosted
         
         steps:
         
@@ -12,14 +12,9 @@ jobs:
           with:
             fetch-depth: 0
 
-        - name: Dependencies
+        - name: Initial cleanup
           run: |
-              sudo sed -i 's/focal/hirsute/g' /etc/apt/sources.list
-              sudo apt update
-              sudo apt -y dist-upgrade
-              sudo apt install binfmt-support qemu-user-static quilt debootstrap apt-cacher-ng libarchive-tools qemu-utils
-              sudo sed 's/# PassThroughPattern:.*this would allow.*/PassThroughPattern: .* #/' -i /etc/apt-cacher-ng/acng.conf
-              sudo chmod -R 0777 /var/cache/apt-cacher-ng
+              rm -rf /citadel
         - name: Set image name
           run: |
               CITADEL_OS_VERSION="$(git describe --tags)"
