--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -4,7 +4,7 @@ on: ["push", "pull_request"]
 jobs:
     build:
 
-        runs-on: self-hosted
+        runs-on: ubuntu-20.04
         
         steps:
         
@@ -12,22 +12,37 @@ jobs:
           with:
             fetch-depth: 0
 
-        - name: Initial cleanup
+        - name: Dependencies
           run: |
-              rm -rf /citadel
+              sudo sed -i 's/focal/hirsute/g' /etc/apt/sources.list
+              sudo apt update
+              sudo apt -y dist-upgrade
+              sudo apt install binfmt-support qemu-user-static quilt debootstrap apt-cacher-ng libarchive-tools qemu-utils
+              sudo sed 's/# PassThroughPattern:.*this would allow.*/PassThroughPattern: .* #/' -i /etc/apt-cacher-ng/acng.conf
+              sudo chmod -R 0777 /var/cache/apt-cacher-ng
         - name: Set image name
           run: |
               CITADEL_OS_VERSION="$(git describe --tags)"
               IMAGE_NAME="citadel-os-${CITADEL_OS_VERSION}"
               echo "CITADEL_OS_VERSION=$CITADEL_OS_VERSION"  >> $GITHUB_ENV
               echo "IMAGE_NAME=$IMAGE_NAME"  >> $GITHUB_ENV
-
+              echo "APT_PROXY=http://localhost:3142" >> $GITHUB_ENV
+        - name: Cache apt packages
+          uses: actions/cache@v2
+          env:
+            cache-name: apt-cacher-ng-cache
+          with:
+            path: /var/cache/apt-cacher-ng
+            key: bullseye-${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('config') }}
+            restore-keys: |
+              bullseye-${{ runner.os }}-build-${{ env.cache-name }}-
+              bullseye-${{ runner.os }}-build-
+              bullseye-${{ runner.os }}-
         - name: Run build script
           run: |
               echo "Building $IMAGE_NAME"
-              docker system prune --all --force
-              IMG_FILENAME=$IMAGE_NAME ZIP_FILENAME=$IMAGE_NAME CITADEL_OS_VERSION=$CITADEL_OS_VERSION ./build.sh
-
+              sudo docker system prune --all --force
+              sudo IMG_FILENAME=$IMAGE_NAME ZIP_FILENAME=$IMAGE_NAME CITADEL_OS_VERSION=$CITADEL_OS_VERSION ./build.sh
         - name: Copy ZIP to current working dir
           run: cp deploy/*.zip ./
 
