--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -4,46 +4,31 @@ on: ["push", "pull_request"]
 jobs:
     build:
 
-        runs-on: ubuntu-20.04
+        runs-on: ubuntu-22.04
         
         steps:
         
         - uses: actions/checkout@v2
           with:
             fetch-depth: 0
-
         - name: Dependencies
           run: |
-              sudo sed -i 's/focal/hirsute/g' /etc/apt/sources.list
               sudo apt update
-              sudo apt -y dist-upgrade
-              sudo apt install binfmt-support qemu-user-static quilt debootstrap apt-cacher-ng libarchive-tools qemu-utils
-              sudo sed 's/# PassThroughPattern:.*this would allow.*/PassThroughPattern: .* #/' -i /etc/apt-cacher-ng/acng.conf
-              sudo chmod -R 0777 /var/cache/apt-cacher-ng
+              sudo apt install binfmt-support qemu-user-static quilt debootstrap apt-cacher-ng libarchive-tools qemu-utils gpg pigz
+
         - name: Set image name
           run: |
               CITADEL_OS_VERSION="$(git describe --tags)"
               IMAGE_NAME="citadel-os-${CITADEL_OS_VERSION}"
               echo "CITADEL_OS_VERSION=$CITADEL_OS_VERSION"  >> $GITHUB_ENV
               echo "IMAGE_NAME=$IMAGE_NAME"  >> $GITHUB_ENV
-              echo "APT_PROXY=http://localhost:3142" >> $GITHUB_ENV
-        - name: Cache apt packages
-          uses: actions/cache@v2
-          env:
-            cache-name: apt-cacher-ng-cache
-          with:
-            path: /var/cache/apt-cacher-ng
-            key: bullseye-${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('config') }}
-            restore-keys: |
-              bullseye-${{ runner.os }}-build-${{ env.cache-name }}-
-              bullseye-${{ runner.os }}-build-
-              bullseye-${{ runner.os }}-
+
         - name: Run build script
           run: |
               echo "Building $IMAGE_NAME"
               sudo docker system prune --all --force
               sudo docker logout ghcr.io
-              sudo IMG_FILENAME=$IMAGE_NAME ZIP_FILENAME=$IMAGE_NAME CITADEL_OS_VERSION=$CITADEL_OS_VERSION ./build.sh
+              sudo IMG_FILENAME=$IMAGE_NAME ARCHIVE_FILENAME=$IMAGE_NAME CITADEL_OS_VERSION=$CITADEL_OS_VERSION ./build.sh
         - name: Copy ZIP to current working dir
           run: cp deploy/*.zip ./
 
