--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -14,7 +14,7 @@ jobs:
         - name: Dependencies
           run: |
               sudo apt update
-              sudo apt install binfmt-support qemu-user-static quilt debootstrap apt-cacher-ng libarchive-tools qemu-utils gpg pigz
+              sudo apt install -y binfmt-support qemu-user-static quilt debootstrap apt-cacher-ng libarchive-tools qemu-utils gpg pigz
 
         - name: Set image name
           run: |
@@ -23,11 +23,17 @@ jobs:
               echo "CITADEL_OS_VERSION=$CITADEL_OS_VERSION"  >> $GITHUB_ENV
               echo "IMAGE_NAME=$IMAGE_NAME"  >> $GITHUB_ENV
 
+        - name: Prepare Docker
+          run: |
+              # These first two commands are a workaround for a bug in GitHub actions
+              sudo rm /etc/docker/daemon.json
+              sudo systemctl restart docker
+              sudo docker system prune --all --force
+              sudo docker logout ghcr.io
+
         - name: Run build script
           run: |
               echo "Building $IMAGE_NAME"
-              sudo docker system prune --all --force
-              sudo docker logout ghcr.io
               sudo IMG_FILENAME=$IMAGE_NAME ARCHIVE_FILENAME=$IMAGE_NAME CITADEL_OS_VERSION=$CITADEL_OS_VERSION ./build.sh
         - name: Copy ZIP to current working dir
           run: cp deploy/*.zip ./
