Add desktop builds

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -46,3 +46,9 @@ jobs:
           with:
             path: ${{ env.IMAGE_NAME }}.zip
             name: ${{ env.IMAGE_NAME }}.zip
+
+        - name: Upload artifact
+          uses: actions/upload-artifact@v2
+          with:
+            path: ${{ env.IMAGE_NAME }}-desktop.zip
+            name: ${{ env.IMAGE_NAME }}-desktop.zip
