--- a/.github/workflows/on-tag-only.yml
+++ b/.github/workflows/on-tag-only.yml
@@ -53,6 +53,7 @@ jobs:
           with:
             files: |
               ${{ env.IMAGE_NAME }}.zip
+              ${{ env.IMAGE_NAME }}-desktop.zip
             name: ${{ github.ref }}
             draft: true
             body: "TODO: Release notes"
