--- a/config
+++ b/config
@@ -5,4 +5,4 @@ FIRST_USER_NAME=citadel
 FIRST_USER_PASS=freedom
 ENABLE_SSH=1
 CITADEL_REPO=https://github.com/runcitadel/core
-CITADEL_BRANCH=stable
+CITADEL_BRANCH=beta
