--- a/config
+++ b/config
@@ -4,5 +4,5 @@ TIMEZONE_DEFAULT="Etc/UTC"
 FIRST_USER_NAME=citadel
 FIRST_USER_PASS=freedom
 ENABLE_SSH=1
-CITADEL_REPO=https://github.com/citadel-core/core
-CITADEL_BRANCH=caddy
+CITADEL_REPO=https://github.com/runcitadel/core
+CITADEL_BRANCH=stable
