--- a/config
+++ b/config
@@ -4,5 +4,5 @@ TIMEZONE_DEFAULT="Etc/UTC"
 FIRST_USER_NAME=citadel
 FIRST_USER_PASS=freedom
 ENABLE_SSH=1
-CITADEL_REPO=https://github.com/runcitadel/core
-CITADEL_BRANCH=stable
+CITADEL_VERSION=v0.2.3
+
