--- a/config
+++ b/config
@@ -4,5 +4,5 @@ TIMEZONE_DEFAULT="Etc/UTC"
 FIRST_USER_NAME=citadel
 FIRST_USER_PASS=freedom
 ENABLE_SSH=1
-CITADEL_VERSION=v0.2.3
+CITADEL_VERSION=0.2.3
 
